--- a/package.json
+++ b/package.json
@@ -10,8 +10,6 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.6",
-    "authenticator": "^1.1.5",
-    "base32-decode": "^1.0.0",
     "buffer": "^5.4.3",
     "expo": "~36.0.0",
     "expo-barcode-scanner": "^8.0.0",
@@ -31,9 +29,12 @@
     "react-native-safe-area-context": "^0.6.2",
     "react-native-screens": "2.0.0-alpha.12",
     "react-native-svg": "^10.1.0",
+    "react-native-swipe-list-view": "^2.1.3",
     "react-native-web": "~0.11.7",
     "react-navigation": "^4.0.10",
-    "react-navigation-stack": "^2.0.15"
+    "react-navigation-stack": "^2.0.15",
+    "thirty-two": "^1.0.2",
+    "url-encode-decode": "^1.0.0"
   },
   "devDependencies": {
     "babel-preset-expo": "~8.0.0",
