--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "expo-camera": "^8.0.0",
     "expo-crypto": "^8.0.0",
     "expo-local-authentication": "^8.0.0",
+    "expo-secure-store": "^8.0.0",
     "querystring": "^0.2.0",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
